--- a/Vortex/vortex.ipynb
+++ b/Vortex/vortex.ipynb
@@ -344,6 +344,109 @@
     "print(f\"wanted_crc = {hex(wanted_crc)}\")\n",
     "print(f\"payload = {payload}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Vortex Level 8 → Level 9\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'\\xb9\\x0c\\xa0\\x04\\x08\\xbbw\\xdd\\xff\\xff\\x89\\x19'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bytes.fromhex(\"b90ca00408bb77ddffff8919\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(b\"\\xb9\\x0c\\xa0\\x04\\x08\\xbbw\\xdd\\xff\\xff\\x89\\x19\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Vortex Level 10 → Level 11\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recovered seed: b'\\xccN\\x9er'\n"
+     ]
+    }
+   ],
+   "source": [
+    "outputs = \"\"\n",
+    "\n",
+    "# Process input text to int list\n",
+    "outputs = outputs.replace(\"[\", \"\").replace(\"]\", \"\").replace(\" \", \"\").split(\",\")\n",
+    "outputs = [int(x, 16) for x in outputs if x]\n",
+    "\n",
+    "\n",
+    "def modinv(a, m):\n",
+    "    t, new_t = 0, 1\n",
+    "    r, new_r = m, a\n",
+    "    while new_r != 0:\n",
+    "        q = r // new_r\n",
+    "        t, new_t = new_t, t - q * new_t\n",
+    "        r, new_r = new_r, r - q * new_r\n",
+    "    if t < 0:\n",
+    "        t += m\n",
+    "    return t\n",
+    "\n",
+    "\n",
+    "a = 1103515245\n",
+    "c = 12345\n",
+    "m = 2**31\n",
+    "inv_a = modinv(a, m)\n",
+    "\n",
+    "# backtrack from the first output to the original seed\n",
+    "state = outputs[0]\n",
+    "for _ in range(len(outputs)):\n",
+    "    state = ((state - c) * inv_a) % m\n",
+    "\n",
+    "print(\"Recovered seed:\", state)\n",
+    "\n",
+    "seed_bytes = int.to_bytes(state, 4, \"little\")\n",
+    "print(\"Seed bytes:\", seed_bytes)"
+   ]
   }
  ],
  "metadata": {
