--- a/Vortex/vortex.ipynb
+++ b/Vortex/vortex.ipynb
@@ -438,6 +438,135 @@
    "source": [
     "0x800"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Vortex Level 12 → Level 13\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'Hello, World!'\n",
+      "[[[0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]],\n",
+      " [[0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]],\n",
+      " [[0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]],\n",
+      " [[0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]],\n",
+      " [[0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]],\n",
+      " [[0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]],\n",
+      " [[0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]],\n",
+      " [[0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]],\n",
+      " [[0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]],\n",
+      " [[0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pprint import pprint\n",
+    "\n",
+    "\n",
+    "pprint(\"Hello, World!\")\n",
+    "\n",
+    "pprint([[[i for i in range(10)] for _ in range(10)] for _ in range(10)])"
+   ]
   }
  ],
  "metadata": {
